--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -31,7 +31,9 @@ header{
 
 .nav-logo{
     width: auto;
-    height: 80px;
+    height: 60px;
+    position: relative;
+    top: 10px;
 
 }
 
@@ -326,6 +328,7 @@ h4{
 .footer-links-mobile{
     display: block;
     margin-top: 30px;
+
 }
 
 
@@ -400,7 +403,7 @@ h4{
         .nav-logo {
             all: unset;
             width: auto;
-            height: 120px;
+            height: 100px;
             margin-right: 0px;
             margin-left: 0px;
 
@@ -616,7 +619,7 @@ h4{
 
         .grid > div{
             padding: 10px;
-            background: white;
+            background: rgb(174,158,158);
             margin-top: 20px
         }
         @media screen and (min-width: 1150px){
