--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="menu">
-            <a href="/" class="nav-logo-container"><img src="../static/images/logo.png" class="nav-logo"></a>
+            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
@@ -150,7 +150,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <img src="../static/images/logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
                 <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
