--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="menu">
-            <a href="/" class="nav-logo-container"><img src="../static/images/logo.png" class="nav-logo"></a>
+            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
