--- a/website/static/css/watch.css
+++ b/website/static/css/watch.css
@@ -176,6 +176,16 @@ nav a:hover{
     margin-top: 10px;
 }
 
+h5{
+   color: black;
+   font-size: 24px;
+   font-weight: 400;
+   text-align: center;
+   margin: 0px;
+   margin-bottom: 10px;
+   margin-top: 25px;
+   padding: 0px;
+}
 .watch-logos{
     display: block;
     margin-top: 30px;
@@ -196,10 +206,16 @@ nav a:hover{
     margin: 10px;
     }
 
+.player-container{
+    width: 100%;
+    height: auto;
+    display: flex;
+
+}
+
 .player {
   margin: 0 auto;
-  display: block;
-  max-width: 100%;
+  width: 90%;
 }
 
 
