--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -619,7 +619,7 @@ h4{
 
         .grid > div{
             padding: 10px;
-            background: rgb(174,158,158);
+            background: white;
             margin-top: 20px
         }
         @media screen and (min-width: 1150px){
