--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -2,27 +2,181 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-
-<!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
+    <link rel="stylesheet" href="../static/css/give.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
 <body>
     <header>
-        <a href="/"><img src="../static/images/logo.png" class="nav-logo"></a>
-        <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
-        <nav>
-            <ul>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Give</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About US</a></li>
-             </ul>
-        </nav>
-        <label for = "nav-toggle" class = "nav-toggle-label">
-        <span></span>
-        </label>
+        <div class="menu">
+            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
+            <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
+            <nav>
+                <ul>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
+                </ul>
+            </nav>
+            <label for = "nav-toggle" class = "nav-toggle-label">
+            <span></span>
+            </label>
+        </div>
     </header>
+
+    <div class="banner">
+        <img src="../static/images/giving.jpg" class="giving-img">
+        <div class="banner-h-container">
+            <h2>GIVING TO BUILD GOD'S KINGDOM</h2>
+        </div>
+        <div class="banner-msg">
+            <p>When you support the ministry of Apostolic Faith Church, you are making an impact locally
+                and internationally. Thank you for your donation, it is seed sown in good soil!
+            </p>
+        </div>
+        <div class="floating-button-container">
+            <div class="floating-button">
+                <ul>
+                    <li><a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5">GIVE NOW</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="mobile-banner">
+        <img src="../static/images/mob-offering.jpg" class="mobile-offering-img">
+    </div>
+
+    <div class="buffer"></div>
+    <div class="address">
+        <p>Dear Church Family,<br><br>
+
+            Thank you for your generous support of our mission!<br><br>
+            We employ the Shelby Giving platform to provide you the highest quality of service. To log in to our
+            system, simply use the email address associated with your Shelby Giving account as the username along
+            with your password. Parents with children in our Educational Programs may contact the Little Saints
+            Academy office at 662-845-4282 for questions about your account.
+            <br><br>
+            Please contact the Administrative Office at 601-354-2599 for any other questions or concerns.
+            <br><br>
+            Thank you for your continued support!
+            <br><br>
+            Office Administration
+        </p>
+        <div class="offering-container">
+            <img src="../static/images/offering.jpg" class="offering-img">
+        </div>
+
+    </div>
+    <div class="buffer"></div>
+
+    <div class="grid-backdrop">
+        <div class="grid">
+            <div>
+                <h2>Aberdeen Giving</h2>
+                <hr class="card-divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <a href="https://www.shelbygiving.com/App/Form/8ca3fc26-2266-44f4-a627-2d40c3f8ebf7">
+                    <img src="../static/images/aberdeen.webp" class="placeholder-img">
+                </a>
+            </div>
+            <div>
+                <h2>Daycare & AfterSchool Payments</h2>
+                <hr class="card-divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                    <a href="https://www.shelbygiving.com/App/Form/884a4886-2c97-4842-a3d6-f3c9fe16d207">
+                        <img src="../static/images/lsa.png" class="placeholder-lsa">
+                    </a>
+            </div>
+            <div>
+                <h2>Landmark Temple Giving</h2>
+                <hr class="card-divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <a href="https://www.shelbygiving.com/App/Form/6944dcd3-125b-4190-9796-52dcc1ef494a">
+                        <img src="../static/images/landmark.jpg" class="placeholder-img">
+                    </a>
+            </div>
+            <div>
+                <h2>Fellowship Hall Giving</h2>
+                <hr class="card-divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <a href="https://www.shelbygiving.com/App/Form/a8603902-ecc5-42a9-9016-10debbe36444">
+                        <img src="../static/images/food.jpeg" class="placeholder-img">
+                    </a>
+            </div>
+            <div>
+                <h2>Family Life Center</h2>
+                <hr class="card-divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <a href="https://www.shelbygiving.com/App/Form/1074db63-a5eb-4e1a-8fb8-e138fc20999c">
+                        <img src="../static/images/flc.jpg" class="placeholder-img">
+                    </a>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="pledge-container">
+            <h2>Ongoing Pledges</h2>
+            <hr class="pledge-divider">
+            <img src="../static/images/landmark.jpg" class="placeholder-img">
+            <p>We're on a mission to help our sister church, Landmark Temple of Holly Springs, Mississippi, build a
+                new worship facility. The current building is in severe disrepair, and the members need our support
+                to help secure a new church building. Please consider a pledge of $1000 or an amount you can afford,
+                payable by April 1, 2023. Thank you for your prayerful support.
+            </p>
+        </div>
+
+        <div class="buffer"></div>
+
+
+      <div class="footer-container">
+    <div class="column">
+      <h4>SERVICE TIMES</h4>
+      <p>SUNDAY WORSHIP SERVICE<br>IN-PERSON & VIRTUAL<br>11AM (CST)</p>
+      <p>BIBLE CLASS<br>IN-PERSON & VIRTUAL<br>7:00PM (CST)</p>
+    </div>
+
+        <div class="footer-divider"></div>
+
+        <div class="footer-links">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+        </div>
+
+        <div class="footer-divider"></div>
+
+
+    <div class="column">
+      <h4>ADDRESS</h4>
+      <p>1505 ROBINSON STREET<br>JACKSON, MS 39203</p>
+      <p>601-354-2599 (Office)<br>GBTNEWS@GBTCHURCH.ORG</p>
+    </div>
+    <div class="footer-links-mobile">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+    </div>
+  </div>
+
 </body>
 </html>
