--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -140,7 +140,10 @@
 
         </div>
     </div>
-    <div class="footer-container">
+
+    <div class="buffer"></div>
+
+      <div class="footer-container">
     <div class="column">
       <h4>SERVICE TIMES</h4>
       <p>SUNDAY WORSHIP SERVICE<br>IN-PERSON & VIRTUAL<br>11AM (CST)</p>
@@ -150,7 +153,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
                 <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
