--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -13,11 +13,11 @@
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Give</a></li>
-                    <li><a href="#">Connect</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">About US</a></li>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
                 </ul>
             </nav>
             <label for = "nav-toggle" class = "nav-toggle-label">
