--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -605,6 +605,7 @@ h4{
             background: var(--burgundy);
             display: grid;
             place-items: center;
+
         }
 
         .grid{
@@ -778,7 +779,11 @@ h4{
             padding: 0px;
             font-weight: 100;
         }
-
+        .buffer{
+            width: 100%;
+            height: 25px;
+            background: var(--burgundy);
+        }
         @media screen and (max-width: 1150px){
             .column {
               display: none;
