--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -14,11 +14,11 @@
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Give</a></li>
-                    <li><a href="#">Connect</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">About US</a></li>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
                 </ul>
             </nav>
             <label for = "nav-toggle" class = "nav-toggle-label">
@@ -36,6 +36,7 @@
             <h2>Staying Spiritually Connected while being Physically Distant</h2>
         </div>
     </div>
+    <div class="buffer"></div>
     <div class="watch-logos">
             <h5>Subscribe to GBTnews and Connect with us on Facebook</h5>
             <div class="watch-socials">
@@ -46,35 +47,18 @@
             </div>
     </div>
 
-    <div class="player-container">
-        <div id="player"></div>
+        <div class="player-container">
+            <div id="player"></div>
+
+        </div>
+    <div class="videoWrapper">
+        <iframe
+            src="https://www.youtube.com/embed?listType=playlist&list=UUpNnNqSJXR_QzmAMM8DeVxQ">
+        </iframe>
     </div>
 
-    <script>
-          function onYouTubeIframeAPIReady() {
-            // Create the YouTube player
-            new YT.Player('player', {
-              height: '360', // Set the desired height
-              width: '640',  // Set the desired width
-              videoId: 'W2fpKbj3eM4', // Replace with the actual video ID
-              events: {
-                'onReady': onPlayerReady,
-                'onStateChange': onPlayerStateChange
-              }
-            });
-          }
 
-          // The API will call this function when the video player is ready
-          function onPlayerReady(event) {
-            event.target.playVideo();
-          }
-
-          // The API calls this function when the player's state changes
-          function onPlayerStateChange(event) {
-            // You can perform actions based on the player's state here
-          }
-    </script>
-
+    <div class="buffer"></div>
 
       <div class="footer-container">
     <div class="column">
