--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -47,6 +47,15 @@
 
     <div class="mobile-banner">
         <img src="../static/images/mob-offering.jpg" class="mobile-offering-img">
+<!--        <div class="blk-buffer"></div>-->
+
+        <div class="mob-floating-button-container">
+            <div class="mob-floating-button">
+                <ul>
+                    <li><a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5">GIVE NOW</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="buffer"></div>
@@ -123,6 +132,7 @@
 
 
     </div>
+    <div class="buffer"></div>
 
     <div class="pledge-container">
             <h2>Ongoing Pledges</h2>
